# bulletproofs

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Makefile  README.md  Testfile  make-doc-internal  rust-toolchain  rustfmt.toml
.circleci/: config.yml
.github/workflows/: check-develop.yml  check-main.yml  rust-develop.yml
benches/: bulletproofs.rs  constraint_system.rs  generators.rs  linear_proof.rs  r1cs.rs  range_proof.rs  scalar_range_proof.rs
docs/: aggregated-proof-protocol.md  aggregation-api.md  circuit-proof-math.md  cs-proof.md  inner-product-protocol.md  notes-intro.md  notes-ipp.md  notes-r1cs.md  notes-rp.md  notes.md  r1cs-docs-example.md  range-proof-protocol.md
docs/assets/: aggregated-range-proof.sketch  rustdoc-include-katex-header.html
src/: errors.rs  fiatshamir.rs  generators.rs  inner_product_proof.rs  lib.rs  linear_proof.rs  main.rs  multi_range_proof.rs  proof_transcript.rs  protocols.rs  random_oracle.rs  range_proof.rs  scalar.rs  transcript.rs  util.rs
src/aggregated_range_proof/: dealer.rs  messages.rs  mod.rs  party.rs  test.rs  tests.rs
src/circuit_proof/: assignment.rs  circuit.rs  constraint_system.rs  constraints.rs  cs.rs  examples.rs  lc.rs  linear_combination.rs  mod.rs  opaque_scalar.rs  proof.rs  prover.rs  r1cs.rs  scalar_value.rs  tests.rs  verifier.rs
src/constraint_system/: assignment.rs  mod.rs  prover.rs  tests.rs  verifier.rs
src/cs/: assignment.rs  mod.rs  prover.rs  tests.rs  verifier.rs
src/r1cs/: assignment.rs  constraint_system.rs  linear_combination.rs  metrics.rs  mod.rs  proof.rs  prover.rs  tests.rs  verifier.rs  zkinterface_backend.rs
src/range_proof/: dealer.rs  messages.rs  mod.rs  party.rs  verification.rs
tests/: r1cs.rs  range_proof.rs  scalar_range_proof.rs
